# flask_blog

./: .dockerignore  .dockerignore_example  Dockerfile  README.md  devDockerfile  docker-compose.yml  env_example  finish.txt  info.txt  pyproject.toml  run.py  run_api.py  wsgi.py
flask_backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  run.py  wsgi.py
flask_backend/flask_backend/: config.py
flask_backend/flask_backend/api/: __init__.py  extensions.py  resources.py  schemas.py
flask_backend/flask_backend/models/: __init__.py  article.py  article_tag.py  author.py  database.py  tag.py  user.py
flask_backend/migrations/versions/: 3491521f0103_initial_migration.py
flask_blog/: app.py  config.py  security.py
flask_blog/admin/: __init__.py  views.py
flask_blog/api/: __init__.py  extensions.py  resources.py  schemas.py
flask_blog/articles/: mock_articles.py  views.py
flask_blog/authors/: views.py
flask_blog/error_handlers/: err_handler.py
flask_blog/forms/: article.py  user.py
flask_blog/index/: views.py
flask_blog/models/: __init__.py  article.py  article_tag.py  author.py  database.py  tag.py  user.py
flask_blog/templates/: base.html  err404.html  index.html  nav.html
flask_blog/templates/articles/: article_create.html  article_detail.html  articles_list.html
flask_blog/templates/auth/: login.html
flask_blog/templates/authors/: authors_list.html
flask_blog/users/: auth.py  mock_users.py  views.py
flask_front/: .dockerignore  Dockerfile  README.md  mylog.txt  pyproject.toml  run.py
flask_front/flask_front/: app.py  config.py
flask_front/flask_front/articles/: views.py
flask_front/flask_front/authors/: views.py
flask_front/flask_front/error_handlers/: err_handler.py
flask_front/flask_front/forms/: article.py
flask_front/flask_front/index/: views.py
flask_front/flask_front/request_api/: api_request.py
flask_front/flask_front/templates/: base.html  index.html  nav.html
flask_front/flask_front/templates/admin/: index.html
flask_front/flask_front/templates/articles/: article_detail.html  articles_list.html
flask_front/flask_front/templates/auth/: register.html
flask_front/flask_front/templates/authors/: author_detail.html
flask_front/flask_front/templates/users/: user_detail.html  users_list.html
flask_front/flask_front/users/: auth.py  views.py
migrations/versions/: 11e79568b10c_.py  ab19518a2ba0_email_field_in_user_model.py  eaf34482639c_.py  f097e11b7ab8_.py  f837fb3b5761_user_model_with_uniq_email.py
tests/: test_api.py  test_app.py
utils/: secret_generator.py
(+2 files in other folders)
