[tool.poetry]
name = "flask-blog"
version = "0.1.0"
description = "Flask Blog"
license = "MIT"
authors = ["Marat-77"]
readme = "README.md"
repository = "https://github.com/Marat-77/flask_blog"
packages = [{include = "flask_blog"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.3"
flask-sqlalchemy = "^3.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
