[tool.poetry]
name = "flask-blog"
version = "0.1.0"
description = "Flask Blog"
license = "MIT"
authors = ["Marat-77"]
readme = "README.md"
repository = "https://github.com/Marat-77/flask_blog"
packages = [{include = "flask_blog"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.3"
flask-sqlalchemy = "^3.0.3"
python-dotenv = "^1.0.0"
flask-login = "^0.6.2"
flask-migrate = "^4.0.4"
psycopg2-binary = "^2.9.6"
bcrypt-flask = "^1.0.2"
flask-wtf = "^1.1.1"
email-validator = "^2.0.0.post2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
# requires = ["poetry-core"]
requires = ["poetry-core>=1.4.2"]
build-backend = "poetry.core.masonry.api"
